infrastructure/kubernetes/microservice/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices
spec:
  selector:
    app: auth-service
  ports:
    - port: 3000
      targetPort: 3000

      
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-service
#   namespace: microservices
# spec:
#   type: NodePort        # 🟢 Thêm dòng này
#   selector:
#     app: auth-service
#   ports:
#     - port: 80
#       targetPort: 3000
#       nodePort: 30080   # 🟢 Mở cổng 30080 trên máy host
