infrastructure/kubernetes/microservice/auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: microservices
  annotations:
    konghq.com/strip-path: "false"
    # konghq.com/plugins: ratelimit-plugin
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
